# Libtorch_series

00_helloworld/: CMakeLists.txt  main.cpp
